--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "highlight.js": "^11.11.1",
+    "github-markdown-css": "^5.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
