Refactor build script in package.json to simplify the build process by removing the setup copy step. Comment out console log statements in setup-loader.ts to reduce clutter during execution.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "cp -r setups public/ && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
